--- a/app/components/climate-page/climate-page.html
+++ b/app/components/climate-page/climate-page.html
@@ -3,7 +3,9 @@
   <div class="navbar-text pl-3">
     <div class="room-info mb-1 pt-3 text-uppercase text-white">
       <span class="d-sm-block">Climate</span>
-      <h2 class="mb-0" data-ch5-textcontent="">Great Room</h2>
+      <h2 class="mb-0" data-ch5-textcontent="Rooms.SelectedRoomName">
+        Room Name
+      </h2>
     </div>
     <div class="room-temp d-flex align-items-center">
       <h5>Room Temp: 30ºC</h5>
