--- a/app/assets/scss/_components.scss
+++ b/app/assets/scss/_components.scss
@@ -146,12 +146,130 @@
 // Rooms list
 
 .room-list-templ {
-  button {
-    background-color: rgba(128, 128, 128, 0.9);
-    color: white;
-  }
   .dropdown-menu {
-    background-color: rgba(128, 128, 128, 0.9);
+    min-width: 100vw;
+    @include media-breakpoint-up(sm) {
+      min-width: 65vw;
+    }
+    @include media-breakpoint-up(md) {
+      width: 60vw;
+    }
+    // @include media-breakpoint-up(lg) {
+    //   width: 60vw;
+    // }
+    // @include media-breakpoint-up(xl) {
+    //   width: 65vw;
+    // }
+  }
+  .ch5-button {
+    border: 0;
+  }
+  .row {
+    &.list-container {
+      height: 91vh;
+      @include media-breakpoint-up(sm) {
+        height: 85vh;
+      }
+
+      @include media-breakpoint-up(lg) {
+        height: 87vh;
+      }
+      @include media-breakpoint-up(xl) {
+        height: 91vh;
+      }
+    }
+  }
+
+  .floors-container {
+    padding: 12rem 0 0 0;
+    margin-left: 1.5rem;
+    @include media-breakpoint-up(sm) {
+      padding: 5rem 0 0 0;
+    }
+    @include media-breakpoint-up(md) {
+      padding: 10rem 2rem 0;
+    }
+  }
+  .floors-btn {
+    .ch5-button {
+      span {
+        font-size: 1.7rem;
+      }
+    }
+    display: grid;
+    grid-template-columns: minmax(auto, 25vmin);
+    // grid-auto-rows: 1fr;
+    @include media-breakpoint-up(sm) {
+      grid-template-columns: minmax(auto, 20vmin);
+    }
+    @include media-breakpoint-up(md) {
+      grid-template-columns: minmax(auto, 17vmin);
+    }
+    @include media-breakpoint-up(lg) {
+      grid-template-columns: minmax(auto, 15vmin);
+    }
+    @include media-breakpoint-up(xl) {
+      grid-template-columns: minmax(auto, 14vmin);
+      grid-gap: 1.4rem;
+    }
+  }
+  .floors-btn::before {
+    content: "";
+    width: 0;
+    padding-bottom: 100%;
+    grid-row: 1 / 1;
+    grid-column: 1 / 1;
+  }
+  .floors-btn > *:first-child {
+    grid-row: 1 / 1;
+    grid-column: 1 / 1;
+  }
+  .floors-btn > div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+  .rooms-container {
+    height: inherit;
+    margin-left: 0.5rem;
+
+    ch5-list {
+      .list-item {
+        padding: 0 !important;
+      }
+      // .scrollbar-container {
+      //   width: 5px;
+      // }
+    }
+  }
+  .rooms-btn {
+    display: grid;
+    grid-template-columns: minmax(auto, 45vmin);
+    grid-auto-rows: 10vh;
+    @include media-breakpoint-only(sm) {
+      grid-template-columns: minmax(auto, 50vmin);
+      grid-auto-rows: 15vh;
+    }
+    .ch5-button {
+      &.ch5-button--selected {
+        transform: translateY(-8px);
+        font-size: 1.5rem;
+        height: 120%;
+
+        // margin-top: 0.5rem !important;
+      }
+    }
+  }
+
+  ch5-list {
+    .list-item {
+      border: 0;
+
+      @include media-breakpoint-down(sm) {
+        padding: 1.2rem 1.4rem;
+      }
+    }
   }
 }
 
