--- a/app/components/room-list-templ/room-list-templ.html
+++ b/app/components/room-list-templ/room-list-templ.html
@@ -1,132 +1,83 @@
 <section id="room-list-templ">
   <div class="room-list-templ">
-   
     <div class="dropdown left">
-      
       <button
-        class="btn btn-lg"
+        class="btn btn-lg dropdown-btn"
         type="button"
         id="dropdownMenuButton"
         data-toggle="dropdown"
         aria-haspopup="true"
         aria-expanded="false"
-        
       >
         <i class="fas fa-home"></i>
-       
       </button>
       <div
         onclick="dropDown()"
-        class="dropdown-menu"
+        class="dropdown-menu animate__animated"
         id="rooms-dropdown"
         aria-labelledby="dropdownMenuButton"
-       
       >
-        <div class="row">
-          <div class="col-3">
-
-            <ch5-list
-              class="ch5-custom-list"
-              orientation="vertical"
-              indexId="idx"
-              receivestatesize="Floor[0].NumberOfFloors"
-             
-            >
-              <template>
-
-               <ch5-button
-                  id="btn_id"
-                  type="default"
-                  shape="rectangle"
-                  
-                  
-                  orientation="horizontal"
-                  sendeventonclick="Floor[{{idx}}].FloorSelect"
-                  sendeventontouch="btn_id_touched"
-                
-                  receivestatelabel="Floor[{{idx}}].NameOfFloor"
-                  receivestateselected="Floor[{{idx}}].FloorIsSelected"                
-
-                >
-                </ch5-button>   
-                
-               
-              </template> 
-
-
-              
-            </ch5-list>
-          </div> 
-
-          <div class="col-9">
-
-            <ch5-list  
-            class="ch5-custom-list"
-            orientation="vertical"                 
-            orientation="vertical"
-            indexId="idx"
-           
-            receivestatesize="Floor[0].NumberOfRooms"
-            >
-
-            <template>
-              <ch5-button
-              id="btn_id"
-              type="default"
-              shape="rectangle"
-              
-              orientation="horizontal"
-                sendeventonclick="Floor[0].Room[{{idx}}].RoomSelect"
-                sendeventontouch="btn_id_touched"
-                receivestateselected="Floor[0].Room[{{idx}}].RoomSelected"
-                receivestatelabel="Floor[0].Room[{{idx}}].RoomName"
+        <div class="row list-container">
+          <div class="col-5 p-0 d-flex justify-content-center">
+            <div class="floors-container">
+              <ch5-list
+                class=""
+                orientation="vertical"
+                indexId="idx"
+                receivestatesize="Floors.NumberOfFloors"
               >
-              </ch5-button>
-            </template>
-
-            </ch5-list>
-
-<!--            
-            
-          <div class="col-15">
-
-            <ch5-list  
-            class="ch5-custom-list"
-            orientation="vertical"                 
-            orientation="vertical"
-            indexId="idx"
-            receivestatesize="Floor[1].NumberOfRooms"
-            >
-
-            <template>
-              <ch5-button
-              id="btn_id"
-              type="default"
-              shape="rectangle"
-              
-              orientation="horizontal"
-                sendeventonclick="Floor[1].Room[{{idx}}].RoomSelect"
-                sendeventontouch="btn_id_touched"
-                receivestateselected="Floor[1].Room[{{idx}}].RoomSelected"
-                receivestatelabel="Floor[1].Room[{{idx}}].RoomName"
-              >
-              </ch5-button>
-            </template>
-
-            </ch5-list>
-        
-
-
-          </div> -->
-        
-            
-
+                <template>
+                  <div class="floors-btn">
+                    <ch5-button
+                      id="floor-btn-{{idx}}"
+                      customClass="floor-btn-{{idx}}"
+                      onclick="resetTransform()"
+                      type="default"
+                      shape="circle"
+                      stretch="both"
+                      orientation="horizontal"
+                      sendeventonclick="Floors.Floor[{{idx}}].SetFloorSelected"
+                      sendeventontouch="Floors.Floor[{{idx}}].SetFloorSelected"
+                      receivestatelabel="Floors.Floor[{{idx}}].NameOfFloor"
+                      receivestateselected="Floors.Floor[{{idx}}].FloorIsSelected"
+                    >
+                    </ch5-button>
+                  </div>
+                </template>
+              </ch5-list>
+            </div>
           </div>
 
-         
-          
-            
-          
+          <div class="col-6 pr-0 rooms-container">
+            <ch5-list
+              class=""
+              orientation="vertical"
+              indexId="idx"
+              receivestatesize="Rooms.NumberOfRooms"
+              scrollbar="true"
+            >
+              <template>
+                <div class="rooms-btn">
+                  <ch5-button
+                    id=""
+                    class="room-btn"
+                    customClass="room-btn-{{idx}}"
+                    onclick="closeDropdown()"
+                    type="default"
+                    shape="rectangle"
+                    orientation="horizontal"
+                    stretch="both"
+                    sendeventonclick="Rooms.Room[{{idx}}].SetRoomSelected"
+                    sendeventontouch=""
+                    receivestatelabel="Rooms.Room[{{idx}}].RoomName"
+                    receivestateshow="Rooms.Room[{{idx}}].RoomSelect"
+                    receivestateselected="Rooms.Room[{{idx}}].RoomIsSelected"
+                  >
+                  </ch5-button>
+                </div>
+              </template>
+            </ch5-list>
+          </div>
         </div>
       </div>
     </div>
