--- a/app/components/blinds-page/blinds-page.html
+++ b/app/components/blinds-page/blinds-page.html
@@ -1,6 +1,6 @@
 <section class="blinds-page">
-  <div class="navbar-text pl-3">
-    <div class="room-info mb-1 pt-3 text-uppercase text-white">
+  <div class="navbar-text">
+    <div class="room-info pt-2 text-uppercase text-white">
       <span class="d-sm-block">Blinds</span>
       <h2 class="mb-0" data-ch5-textcontent="Rooms.SelectedRoomName">
         Room Name
