--- a/app/components/climate-page/climate-page.html
+++ b/app/components/climate-page/climate-page.html
@@ -1,15 +1,15 @@
 <section class="climate-page">
   <!-- <nav class="navbar navbar-dark"> -->
-  <div class="navbar-text pl-3">
-    <div class="room-info mb-1 pt-3 text-uppercase text-white">
+  <div class="navbar-text">
+    <div class="room-info pt-2 text-uppercase text-white">
       <span class="d-sm-block">Climate</span>
       <h2 class="mb-0" data-ch5-textcontent="Rooms.SelectedRoomName">
         Room Name
       </h2>
     </div>
-    <div class="room-temp d-flex align-items-center">
-      <h5>Room Temp: 30ºC</h5>
-    </div>
+  </div>
+  <div class="room-temp d-flex align-items-center">
+    <h5>Room Temp: 30ºC</h5>
   </div>
 
   <hr />
@@ -82,7 +82,7 @@
         class="fan-buttons-container mt-3 d-flex flex-column align-items-center"
       >
         <div class="align-self-start"><h3 class="">Fan</h3></div>
-        <div class="mode-buttons">
+        <div class="mode-buttons fan-buttons">
           <ch5-button
             id="fan-high-btn"
             label="High"
