--- a/app/components/lighting/lighting.html
+++ b/app/components/lighting/lighting.html
@@ -1,7 +1,7 @@
 <section class="examples-container">
   <nav class="navbar navbar-dark">
     <div class="navbar-text">
-      <div class="room-info mb-3 pt-3 text-uppercase">
+      <div class="room-info pt-3 text-uppercase">
         <span class="d-sm-block" data-ch5-i18n="-+lighting.title+-"
           >Lighting</span
         >
