--- a/app/assets/scss/_navbar.scss
+++ b/app/assets/scss/_navbar.scss
@@ -9,7 +9,6 @@
 // Navbar position
 // Navbar themes
 
-
 // Navbar
 //
 // Provide a static navbar from which we expand to create full-width, fixed, and
@@ -25,15 +24,14 @@
 
   // Because flex properties aren't inherited, we need to redeclare these first
   // few properties so that content nested within behave properly.
-  >.container,
-  >.container-fluid {
+  > .container,
+  > .container-fluid {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
   }
 }
-
 
 // Navbar brand
 //
@@ -52,7 +50,6 @@
     text-decoration: none;
   }
 }
-
 
 // Navbar nav
 //
@@ -76,17 +73,18 @@
   }
 }
 
-
 // Navbar text
 //
 //
 
 .navbar-text {
+  margin-top: 0.6rem;
+  margin-left: 1rem;
+
   display: inline-block;
   padding-top: $nav-link-padding-y;
   padding-bottom: $nav-link-padding-y;
 }
-
 
 // Responsive navbar
 //
@@ -110,7 +108,7 @@
   font-size: $navbar-toggler-font-size;
   line-height: 1;
   background-color: rgba(255, 255, 255, 0.9); // remove default button style
-  border: $border-width  solid transparent; // remove default button style
+  border: $border-width solid transparent; // remove default button style
   @include border-radius($navbar-toggler-border-radius);
 
   @include hover-focus {
@@ -129,7 +127,7 @@
   display: inline-block;
   width: 2.5em;
   height: 2.5em;
-  padding-top:2px;
+  padding-top: 2px;
   vertical-align: middle;
   content: "";
   background: no-repeat center center;
@@ -145,9 +143,8 @@
 
     &#{$infix} {
       @include media-breakpoint-down($breakpoint) {
-
-        >.container,
-        >.container-fluid {
+        > .container,
+        > .container-fluid {
           padding-right: 0;
           padding-left: 0;
         }
@@ -171,8 +168,8 @@
         }
 
         // For nesting containers, have to redeclare for alignment purposes
-        >.container,
-        >.container-fluid {
+        > .container,
+        > .container-fluid {
           flex-wrap: nowrap;
         }
 
@@ -190,7 +187,6 @@
     }
   }
 }
-
 
 // Navbar themes
 //
@@ -219,8 +215,8 @@
       }
     }
 
-    .show>.nav-link,
-    .active>.nav-link,
+    .show > .nav-link,
+    .active > .nav-link,
     .nav-link.show,
     .nav-link.active {
       color: $navbar-light-active-color;
@@ -276,8 +272,8 @@
       }
     }
 
-    .show>.nav-link,
-    .active>.nav-link,
+    .show > .nav-link,
+    .active > .nav-link,
     .nav-link.show,
     .nav-link.active {
       color: $navbar-dark-active-color;
@@ -306,10 +302,8 @@
   }
 }
 
-
 // custom info
 .navbar-info {
-
   &,
   &--label {
     display: flex;
@@ -324,7 +318,7 @@
       margin-right: 0.5rem;
     }
 
-    &+.navbar-info--label {
+    & + .navbar-info--label {
       margin-left: 2rem;
     }
   }
